Adicionado as funções de Alterar e Excluir das entidades Diário e Viagem

--- a/views/paginaDiariosViagem.ejs
+++ b/views/paginaDiariosViagem.ejs
@@ -36,6 +36,7 @@
                             <div class="card-body">
                                 <h5 class="card-title"><%= d.titulodiario %></h5>
                                 <h6 class="card-subtitle mb-2 text-muted"><%= d.datadiario %></h6>
+                                <img class="card-img-top" src="/images/<%= d.image %>">
                                 <p class="card-text"><strong>Viagem:</strong> <%= d.tituloviagem %></p>
                             </div>
                             <div class="card-footer text-right">
